<resources>
    <string name="app_name">Quiz</string>
    <string name="title">10問クイズ</string>
    <string name="btn_start">スタート</string>
    <string name="btn_next">次へ</string>
    <string name="question1">日本列島の最西端にある島は何でしょう。</string>
    <string name="q1_ans1">与那国島</string>
    <string name="q1_ans2">石垣島</string>
    <string name="q1_ans3">波照間島</string>
    <string name="q1_ans4">竹富島</string>
    <string name="question2">沖縄には、タコスミートやチーズなどの具材をご飯の上にのせた料理が有ります。それは何という料理でしょう。</string>
    <string name="q2_ans1">タコライス</string>
    <string name="q2_ans2">メガタコス</string>
    <string name="q2_ans3">沖縄丼</string>
    <string name="q2_ans4">タコスドリーム</string>
    <string name="question3">沖縄の美ら海水族館には、成長すると10m〜12mになる魚類がいます。それは何でしょう。</string>
    <string name="q3_ans1">ジンベエザメ</string>
    <string name="q3_ans2">ホオジロザメ</string>
    <string name="q3_ans3">シャチ</string>
    <string name="q3_ans4">イルカ</string>
    <string name="question4">沖縄のご当地ヒーロー「琉神マブヤー」の必殺技である「スーパーメーゴーサー」の「メーゴーサー」は標準語で何という意味でしょう。</string>
    <string name="q4_ans1">げんこつ</string>
    <string name="q4_ans2">タックル</string>
    <string name="q4_ans3">回し蹴り</string>
    <string name="q4_ans4">パンチ</string>
    <string name="question5">沖縄県の「花」は次のうちどれでしょう。</string>
    <string name="q5_ans1">デイゴ</string>
    <string name="q5_ans2">ハイビスカス</string>
    <string name="q5_ans3">リュウキュウウリ</string>
    <string name="q5_ans4">ヒマワリ</string>
    <string name="question6">沖縄県が国内の生産量の99％を占めているものは次のうちどれでしょう。</string>
    <string name="q6_ans1">サトウキビ</string>
    <string name="q6_ans2">パイナップル</string>
    <string name="q6_ans3">バナナ</string>
    <string name="q6_ans4">マンゴー</string>
    <string name="question7">沖縄県の地名である「具志頭」の読み方はどれでしょう。</string>
    <string name="q7_ans1">ぐしちゃん</string>
    <string name="q7_ans2">ぐすず</string>
    <string name="q7_ans3">ぐしあたま</string>
    <string name="q7_ans4">ぐっじょぶ</string>
    <string name="question8">沖縄県の方言で「ひざまづき」とはどんな意味でしょう。</string>
    <string name="q8_ans1">正座</string>
    <string name="q8_ans2">土下座</string>
    <string name="q8_ans3">立ちひざ</string>
    <string name="q8_ans4">膝蹴り</string>
    <string name="question9">沖縄県の県蝶はどれでしょう。</string>
    <string name="q9_ans1">オオゴマダラ</string>
    <string name="q9_ans2">イシガケチョウ</string>
    <string name="q9_ans3">アサギマダラ</string>
    <string name="q9_ans4">クロアゲハ</string>
    <string name="question10">沖縄県の地名である「勢理客」の読み方はどれでしょう。</string>
    <string name="q10_ans1">じっちゃく</string>
    <string name="q10_ans2">せりかく</string>
    <string name="q10_ans3">しりちゃく</string>
    <string name="q10_ans4">せいりきゃく</string>
</resources>